--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,17 @@
 [tool.poetry]
 name = "intelligence-bot"
 version = "0.5.0"
-description = "Personal discord assistant bot"
+description = "Personal discord assistant bot."
+readme = "README.md"
 authors = ["Pedro Valente <pedro.amaral.valente@gmail.com>"]
+repository = 'https://github.com/StrengthDev/intelligence-bot'
+license = "Apache-2.0"
+keywords = ["discord", "bot"]
+
+packages = [
+    { include = "core" },
+    { include = "webui" },
+]
 
 [tool.poetry.scripts]
 intelligence = "core.main:main"
@@ -17,5 +26,5 @@ flask = "^2.3"
 pytest = "^7.4.2"
 
 [build-system]
-requires = ["poetry>=1.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
