--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ packages = [
 
 [tool.poetry.scripts]
 intelligence = "core.main:main"
-default_config = "core.generate_config:main"
+generate_config = "core.generate_config:main"
 
 [tool.poetry.dependencies]
 python = "^3.11"
